<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorPrimaryDark">
        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:src="@drawable/icon_back2x"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            tools:ignore="ContentDescription"
            android:onClick="backClick"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="18sp"
            android:paddingTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:background="@color/gray_input_pin_bg">
        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"

            android:src="@drawable/icon" />
        <TextView
            android:id="@+id/tv_show_pos_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/version1"
            android:textSize="@dimen/font_size_small"
            android:textColor="@android:color/black"
            android:gravity="center"/>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:onClick="versionClick">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_smaller"
            android:text="Version Information"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:src="@drawable/more" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="@color/gray_input_pin_bg">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <TextView
            android:id="@+id/tv_show_battery_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="@color/gray_input_pin_bg">
    </View>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp"
        android:background="@color/gray_input_pin_bg"
        android:gravity="bottom|center"
        android:textSize="@dimen/font_size_smallest1"
        android:textColor="@color/textview_infos"
        android:text="@string/versionInfo"
        android:id="@+id/textView" />

</LinearLayout>
