<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pax.tradepaypw.MainActivity">

    <com.pax.tradepaypw.view.MyVedioView
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <include
        layout="@layout/fragment_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:background="#f5f4f9">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_input_pin_bg" />
        <LinearLayout
            android:id="@+id/ll_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/ll_aid"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/select_background"
                android:onClick="aidClick"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/app_version" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:paddingTop="3dp"
                    android:text="@string/view_aid"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_smaller" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray_input_pin_bg" />

            <LinearLayout
                android:id="@+id/ll_capk"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@drawable/select_background"
                android:onClick="capkClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/app_query" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:paddingTop="3dp"
                    android:text="@string/view_capk"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_smaller" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray_input_pin_bg" />

            <LinearLayout
                android:id="@+id/ll_version"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@drawable/select_background"
                android:orientation="vertical"
                android:onClick="versionClick">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/app_setting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:paddingTop="3dp"
                    android:text="@string/view_version"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_smaller" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_input_pin_bg" />

        <FrameLayout
            android:id="@+id/fl_trans_softkeyboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@color/keyboard_background_color"
            android:visibility="gone">

            <com.pax.tradepaypw.view.SoftKeyboardPosStyle
                android:id="@+id/soft_keyboard_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="0.5dp"
                android:background="@color/keyboard_background_color" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>
